fix text and titles on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
   text-align: center;
   height: 200px;
 }
-.book-title {
+.book-title, .book-title-xs {
   font-size: 16px;
   font-weight: bold;
 }
